fixed the users component not showing the close button for moadl and added missing gender key to the add-student component

--- a/client/src/styles/user.scss
+++ b/client/src/styles/user.scss
@@ -31,5 +31,6 @@
     color: white;
     background-color: black;
     width: 100%;
+    margin-top: 20px;
     height: 100%;
 }
